--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
-        <meta name="description" content="Web site created using create-react-app" />
-        <title>CHESS GAME</title>
+        <meta name="description" content="" />
+        <title>chess bot</title>
     </head>
     <body>
         <div id="root"></div>
