--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="" />
-        <title>chess bot</title>
+        <title>CHESS BOT</title>
     </head>
     <body>
         <div id="root"></div>
